--- a/log_spiral.ipynb
+++ b/log_spiral.ipynb
@@ -37,7 +37,7 @@
     "numsteps = 10\n",
     "\n",
     "xs = [a*cos(th)*exp(b*th)-1 for th in range(0, numsteps*step, step)]\n",
-    "ys = [a*sin(th)*exp(b*th)-1 for th in range(0, numsteps*step, step)]\n",
+    "ys = [a*sin(th)*exp(b*th) for th in range(0, numsteps*step, step)]\n",
     "\n",
     "print(xs)\n",
     "\n",
